--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,6 +12,6 @@
 @import "layout/header";
 @import "layout/footer";
 
-@import "blocks/block-default";
+@import "blocks/block-mouse";
 
 @import "general";
