--- a/src/index.njk
+++ b/src/index.njk
@@ -6,6 +6,4 @@ htmlClass: html
 bodyClass: body
 ---
 
-{% include "blocks/block-1.njk" %}
-{% include "blocks/block-2.njk" %}
-{% include "blocks/block-3.njk" %}
+{% include "blocks/block_mouse.njk" %}
