--- a/src/includes/blocks/block_mouse.njk
+++ b/src/includes/blocks/block_mouse.njk
@@ -1,9 +1,5 @@
 <section id="container" class="block-mouse">
-    {# 1 #}
-    <div class="box __target"></div>
-
-    {# 2 #}
-    {# <div class="box __target" data-speed="0.05"></div>
-    <div class="box __target" data-speed="0.1"></div>
-    <div class="box __target" data-speed="0.5"></div> #}
+    {# <div class="wrapper"> #}
+        <div class="box __target"></div>
+    {# </div> #}
 </section>
