--- a/src/assets/styles/blocks/_block-mouse.scss
+++ b/src/assets/styles/blocks/_block-mouse.scss
@@ -1,25 +1,26 @@
 .block-mouse {
+    align-items: center;
+    display: flex;
     height: 100vh;
+    justify-content: center;
     width: 100vw;
+
+    // .wrapper {
+    //     border: 1px solid black;
+    //     height: 50%;
+    //     position: relative;
+    //     width: 50%;
+    // }
 
     .box {
         height: 250px;
-        left: 50%;
+        left: calc(50% - 125px);
         position: absolute;
-        top: 50%;
-        transform: translate3d(-50%, -50%, 0);
+        top: calc(50% - 125px);
         width: 250px;
         
         &:first-child {
             background-color: orange;
-        }
-        
-        &:nth-child(2) {
-            background-color: yellow;
-        }
-        
-        &:nth-child(3) {
-            background-color: red;
         }
     }
 }
