Adds locomitive scroll

--- a/src/includes/layout/default.njk
+++ b/src/includes/layout/default.njk
@@ -12,7 +12,7 @@
 
         {# MAIN #}
         <main id='Main'>
-            <article>
+            <article data-scroll-container>
                 {{ content | safe }}
             </article>
         </main>
