--- a/src/includes/blocks/block_text.njk
+++ b/src/includes/blocks/block_text.njk
@@ -1,6 +1,6 @@
 {% macro block(data) %}
 
-<section class="block-default" scroll-item>
+<section class="block-default" data-scroll-section>
 {{ data.text | safe }}
 </section>
 
