--- a/src/includes/blocks/block-3.njk
+++ b/src/includes/blocks/block-3.njk
@@ -1,4 +1,4 @@
-<section class="block-default" data-scroll>
+<section class="block-default" data-scroll data-scroll-section-id="block-3">
     <h2 class="title">OLLIHCUC</h2>
     <p>
         Scan Man is the sysop of Pirate 80 (P-80), a telcom enthusiasts' bulletin board
