--- a/src/includes/layout/default.njk
+++ b/src/includes/layout/default.njk
@@ -17,6 +17,9 @@
             </article>
         </main>
 
+        {# SCROLLBAR #}
+        {% include "modules/scroll_bar.njk" %}
+
         {# FOOTER #}
         {% include "layout/footer.njk" %}
 
