--- a/src/includes/layout/footer.njk
+++ b/src/includes/layout/footer.njk
@@ -1,12 +1,5 @@
-<footer id="Footer">
+<footer id="Footer" data-scroll>
     <div>
-        THE END
-    </div>
-    <div>
-        made by <a href="https://www.josesentis.com">Jose Sentis</a>
+        THE END. made by <a href="https://www.josesentis.com">Jose Sentis</a>
     </div>
 </footer>
-
-
-
-
