--- a/src/assets/styles/modules/_scroll-bar.scss
+++ b/src/assets/styles/modules/_scroll-bar.scss
@@ -1,6 +1,6 @@
 .scroll-bar {
     height: 5px;
-    position: absolute;
+    position: fixed;
     top: var(--header-height);
     transform: translate3d(0, 0, 0);
     transition: transform .3s ease-out;
@@ -15,5 +15,6 @@
         position: absolute;
         transform: scale3d(0, 1, 1);
         width: 100%;
+        transform-origin: center left;
     }
 }
