--- a/src/includes/layout/footer.njk
+++ b/src/includes/layout/footer.njk
@@ -1,4 +1,4 @@
-<footer id="Footer" data-scroll>
+<footer id="Footer" data-scroll data-scroll-call="footer">
     <div>
         THE END. made by <a href="https://www.josesentis.com">Jose Sentis</a>
     </div>
