--- a/src/assets/styles/_general.scss
+++ b/src/assets/styles/_general.scss
@@ -1,7 +1,12 @@
 html {
-    width: 100%;
-    height: 100%;
     background: var(--secondary);
+    height: 100%;
+    transition: background .2s ease-out;
+    width: 100%;
+
+    &.page-end {
+        background: var(--grey);
+    }
 }
 
 body {
