--- a/src/includes/blocks/block_image.njk
+++ b/src/includes/blocks/block_image.njk
@@ -1,7 +1,5 @@
 {% macro block(data) %}
-
-<section data-scroll-section>
-    {% img data.image %}
-</section>
-
+    <section data-scroll>
+        {% img data.image %}
+    </section>
 {% endmacro %}
