--- a/src/includes/blocks/block-1.njk
+++ b/src/includes/blocks/block-1.njk
@@ -1,5 +1,5 @@
 <section id="block-1" class="block-default" data-scroll>
-    <h1 class="title">TITLE</h1>
+    <h1 class="title">BLOCK 1</h1>
     <p>
         Scan Man is the sysop of Pirate 80 (P-80), a telcom enthusiasts' bulletin board
         in Charleston, West Virginia (304).
