--- a/src/includes/blocks/block-2.njk
+++ b/src/includes/blocks/block-2.njk
@@ -1,5 +1,5 @@
-<section class="block-default" data-scroll>
-    <h2 class="title">OLLIHCUC</h2>
+<section class="block-default" data-scroll data-scroll-class="text-reveal">
+    <h2 class="title">BLOCK 2</h2>
     <p>
         Scan Man is the sysop of Pirate 80 (P-80), a telcom enthusiasts' bulletin board
         in Charleston, West Virginia (304).
