Adds scroll speeds block

--- a/src/index.njk
+++ b/src/index.njk
@@ -7,5 +7,6 @@ bodyClass: body
 ---
 
 {% include "blocks/block-1.njk" %}
+{% include "blocks/block-speeds.njk" %}
 {% include "blocks/block-2.njk" %}
 {% include "blocks/block-3.njk" %}
