--- a/src/includes/blocks/block-speeds.njk
+++ b/src/includes/blocks/block-speeds.njk
@@ -1,8 +1,8 @@
-<section class="block-speeds">
+<section class="block-speeds" data-scroll>
     <h2 class="title">BLOCK SPEEDS</h2>
     <div class="wrapper">
         <img src="/assets/images/image.jpg" data-scroll data-scroll-speed="5" />
-        <img src="/assets/images/image.jpg" data-scroll data-scroll-speed="1" />
+        <img src="/assets/images/image.jpg" />
         <img src="/assets/images/image.jpg" data-scroll data-scroll-speed="10" />
     </div>
 </section>
