--- a/src/index.njk
+++ b/src/index.njk
@@ -7,6 +7,11 @@ bodyClass: body
 ---
 
 {% include "blocks/block-1.njk" %}
-{% include "blocks/block-speeds.njk" %}
+{# ----- 1 ----- #}
+{# {% include "blocks/block-sticky.njk" %} #}
 {% include "blocks/block-2.njk" %}
+{# ----- 2 ----- #}
+{# {% include "blocks/block-speeds.njk" %} #}
+{# ----- 3 ----- #}
+{% include "blocks/block-image.njk" %}
 {% include "blocks/block-3.njk" %}
