--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,6 +14,7 @@
 
 @import "blocks/block-default";
 @import "blocks/block-speeds";
+@import "blocks/block-sticky";
 
 @import "modules/scroll-bar";
 
