--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,6 +15,7 @@
 @import "blocks/block-default";
 @import "blocks/block-speeds";
 @import "blocks/block-sticky";
+@import "blocks/block-image";
 
 @import "modules/scroll-bar";
 
