--- a/src/includes/blocks/block-image.njk
+++ b/src/includes/blocks/block-image.njk
@@ -1,6 +1,6 @@
-<section class="block-image">
-    <h2 class="title">BLOCK SPEEDS</h2>
+<section id="block-image" class="block-image" data-scroll data-scroll-class="img-scale">
+    <h2 class="title">BLOCK IMAGE</h2>
     <div class="wrapper">
-        <img class="__img" src="/assets/images/image.jpg" />
+        <img src="/assets/images/image.jpg" />
     </div>
 </section>
