--- a/src/includes/blocks/block-image-scale.njk
+++ b/src/includes/blocks/block-image-scale.njk
@@ -1,5 +1,5 @@
 <section id="block-image" class="block-image" data-scroll data-scroll-class="img-scale">
-    <h2 class="title">BLOCK IMAGE</h2>
+    <h2 class="title">BLOCK IMAGE SCALE</h2>
     <div class="wrapper">
         <img src="/assets/images/image.jpg" />
     </div>
