--- a/src/index.njk
+++ b/src/index.njk
@@ -13,5 +13,7 @@ bodyClass: body
 {# ----- 2 ----- #}
 {# {% include "blocks/block-speeds.njk" %} #}
 {# ----- 3 ----- #}
-{% include "blocks/block-image.njk" %}
+{# {% include "blocks/block-image-scale.njk" %} #}
+{# ----- 4 ----- #}
+{# {% include "blocks/block-image-skew.njk" %} #}
 {% include "blocks/block-3.njk" %}
