Adds horizontal scroll

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import "blocks/block-speeds";
 @import "blocks/block-sticky";
 @import "blocks/block-image";
+@import "blocks/block-slider-horizontal-scroll";
 
 @import "modules/scroll-bar";
 
