--- a/src/index.njk
+++ b/src/index.njk
@@ -7,13 +7,10 @@ bodyClass: body
 ---
 
 {% include "blocks/block-1.njk" %}
-{# ----- 1 ----- #}
-{# {% include "blocks/block-sticky.njk" %} #}
+{% include "blocks/block-sticky.njk" %}
 {% include "blocks/block-2.njk" %}
-{# ----- 2 ----- #}
-{# {% include "blocks/block-speeds.njk" %} #}
-{# ----- 3 ----- #}
-{# {% include "blocks/block-image-scale.njk" %} #}
-{# ----- 4 ----- #}
-{# {% include "blocks/block-image-skew.njk" %} #}
+{% include "blocks/block-slider-horizontal-scroll.njk" %}
+{% include "blocks/block-speeds.njk" %}
+{% include "blocks/block-image-scale.njk" %}
+{% include "blocks/block-image-skew.njk" %}
 {% include "blocks/block-3.njk" %}
