--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,6 +17,7 @@
 @import "blocks/block-sticky";
 @import "blocks/block-image";
 @import "blocks/block-slider-horizontal-scroll";
+@import "blocks/block-slider-fade";
 
 @import "modules/scroll-bar";
 
