--- a/src/index.njk
+++ b/src/index.njk
@@ -9,8 +9,11 @@ bodyClass: body
 {% include "blocks/block-1.njk" %}
 {% include "blocks/block-sticky.njk" %}
 {% include "blocks/block-2.njk" %}
-{% include "blocks/block-slider-horizontal-scroll.njk" %}
+{# ---- 1 ---- #}
+{# {% include "blocks/block-slider-horizontal-scroll.njk" %} #}
 {% include "blocks/block-speeds.njk" %}
+{# ---- 2 ---- #}
+{# {% include "blocks/block-slider-fade.njk" %} #}
 {% include "blocks/block-image-scale.njk" %}
 {% include "blocks/block-image-skew.njk" %}
 {% include "blocks/block-3.njk" %}
