--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -18,6 +18,7 @@
 @import "blocks/block-image";
 @import "blocks/block-slider-horizontal-scroll";
 @import "blocks/block-slider-fade";
+@import "blocks/block-object";
 
 @import "modules/scroll-bar";
 
