--- a/src/includes/blocks/block-1.njk
+++ b/src/includes/blocks/block-1.njk
@@ -1,4 +1,4 @@
-<section id="block-1" class="block-default" data-scroll>
+<section id="block-1" class="block-default" data-scroll-section>
     <h1 class="title">BLOCK 1</h1>
     <p>
         Scan Man is the sysop of Pirate 80 (P-80), a telcom enthusiasts' bulletin board
