--- a/src/includes/blocks/block-image-skew.njk
+++ b/src/includes/blocks/block-image-skew.njk
@@ -1,6 +1,8 @@
-<section id="block-image-skew" class="block-image" data-scroll data-scroll-class="img-skew">
-    <h2 class="title">BLOCK IMAGE SKEW</h2>
-    <div class="wrapper">
-        <img src="/assets/images/image.jpg" />
+<section id="block-image-skew" class="block-image" data-scroll-section>
+    <div data-scroll data-scroll-type="img-skew">
+        <h2 class="title">BLOCK IMAGE SKEW</h2>
+        <div class="wrapper">
+            <img src="/assets/images/image.jpg" />
+        </div>
     </div>
 </section>
