--- a/src/includes/blocks/block-slider-fade.njk
+++ b/src/includes/blocks/block-slider-fade.njk
@@ -1,10 +1,10 @@
-<section class="block-slider-fade">
+<section class="block-slider-fade" data-scroll-section>
     <h2 class="title">BLOCK SLIDER FADE</h2>
     <div
         id="block-slider-fade"
         class="slider"
         data-scroll 
-        data-scroll-class="slider-fade" 
+        data-scroll-type="slider-fade" 
         style="--height: 300vh;"
     >
     <div data-scroll data-scroll-sticky data-scroll-target="#block-slider-fade">
