--- a/src/includes/blocks/block-sticky.njk
+++ b/src/includes/blocks/block-sticky.njk
@@ -1,6 +1,6 @@
-<section class="block-sticky" data-scroll>
+<section class="block-sticky" data-scroll-section>
     <div id="sticky">
-        <h2 class="title" data-scroll data-scroll-sticky data-scroll-target="#sticky">BLOCK STICKY</h2>
+        <h2 class="title" data-scroll data-scroll-sticky data-scroll-repeat data-scroll-target="#sticky">BLOCK STICKY</h2>
         <div class="content">
             <p>
                 Scan Man is the sysop of Pirate 80 (P-80), a telcom enthusiasts' bulletin board
