--- a/src/includes/layout/default.njk
+++ b/src/includes/layout/default.njk
@@ -17,6 +17,7 @@
                 {# FOOTER #}
                 {% include "layout/footer.njk" %}
             </article>
+            <div id="object"></div>
         </main>
 
         {# SCROLLBAR #}
