--- a/src/includes/layout/footer.njk
+++ b/src/includes/layout/footer.njk
@@ -1,5 +1,5 @@
-<footer id="Footer" data-scroll data-scroll-call="footerAnimation" data-scroll-repeat>
-    <div>
+<footer id="Footer" data-scroll-section>
+    <div data-scroll data-scroll-call="footerAnimation" data-scroll-repeat>
         THE END. made by <a href="https://www.josesentis.com">Jose Sentis</a>
     </div>
 </footer>
