--- a/src/index.njk
+++ b/src/index.njk
@@ -9,11 +9,10 @@ bodyClass: body
 {% include "blocks/block-1.njk" %}
 {% include "blocks/block-sticky.njk" %}
 {% include "blocks/block-2.njk" %}
-{# ---- 1 ---- #}
-{# {% include "blocks/block-slider-horizontal-scroll.njk" %} #}
+{% include "blocks/block-object.njk" %}
+{% include "blocks/block-slider-horizontal-scroll.njk" %}
 {% include "blocks/block-speeds.njk" %}
-{# ---- 2 ---- #}
-{# {% include "blocks/block-slider-fade.njk" %} #}
+{% include "blocks/block-slider-fade.njk" %}
 {% include "blocks/block-image-scale.njk" %}
 {% include "blocks/block-image-skew.njk" %}
 {% include "blocks/block-3.njk" %}
