--- a/src/includes/blocks/block-slider-horizontal-scroll.njk
+++ b/src/includes/blocks/block-slider-horizontal-scroll.njk
@@ -1,10 +1,10 @@
-<section class="block-slider-horizontal-scroll">
+<section class="block-slider-horizontal-scroll" data-scroll-section>
     <h2 class="title">BLOCK SLIDER HORIZONTAL SCROLL</h2>
     <div
         id="block-slider-horizontal-scroll"
         class="slider"
         data-scroll 
-        data-scroll-class="slider-horizontal-scroll" 
+        data-scroll-type="slider-horizontal-scroll" 
         style="--height: 500vw;"
     >
     <div data-scroll data-scroll-sticky data-scroll-target="#block-slider-horizontal-scroll">
