--- a/src/includes/blocks/block-speeds.njk
+++ b/src/includes/blocks/block-speeds.njk
@@ -1,4 +1,4 @@
-<section class="block-speeds" data-scroll>
+<section class="block-speeds" data-scroll-section>
     <h2 class="title">BLOCK SPEEDS</h2>
     <div class="wrapper">
         <img src="/assets/images/image.jpg" data-scroll data-scroll-speed="5" />
